# holobionte-1rec3

./: .gitignore  ACCESO_NUANDI.md  CODEX.md  CONFIGURACION_SYNC_GDRIVE.md  CONTRIBUTING.md  ESPIRAL_HOLOBIONTE.md  HITOS.md  HOME.md  INSTRUCCIONES_UNIVERSALES.md  INTEGRACIONES.md  MANIFEST.md  MANIFIESTO_AGI.md  PLAN_REFINAMIENTO_SEO.md  PROTOCOLO_ESPIRAL_HOLOBIONTE_COMPLETO.md  PROTOCOL_INTEGRACION.md  README.md  ROADMAP_POTENCIA.md  Reorganizacion_Holobionte.md  TO_DO_LIST.md  _sidebar.md  index.html  robots.txt  sitemap.xml  test_npu_benchmark.sh  test_npu_llamacpp.sh
.1rec3/: JERARQUIA.md  OMEGA.md
archivo/: ESTRUCTURA_ETIQUETAS_V1_OBSOLETA.md
config/: MCP_NOTION_SETUP.md  MCP_SETUP.md  distributed.yaml
docs/: AGENTES_LVL4.md  ARQUITECTURA_ESCALABLE.md  BIENVENIDA.md  DASHBOARD_HOLOBIONTE.md  DIAGNOSTICO_NUANDI_01DIC2025.md  ESTADO_NPU.md  ESTRATEGIA_POV_TRIPLE_INCONGRUENCIA.md  ESTRUCTURA_ETIQUETAS_V2.md  FALLO_CRITICO_CHAT_COMET.md  GLOSARIO.md  GRANTS.md  HYLIDAE_ESPECIES_GUINEA_ECUATORIAL_REINO_RANAS.md  INDICE_MAESTRO_THREADS.md  LECCIONES_LIMPIEZA_27ENE2025.md  LOGROS_SESION_27ENE2025_COMET_ZRO.md  METODO_HOLOBIONTE.md  MISION_ARCA_INTERNET_ARCHIVE.md  MOE_DE_MOES_27NOV2025.md  NLNET_APPLICATION_2025.md  NU_FASE1_IMPLEMENTACION.md  RASTRO_FIRMA.md  (+10 more)
nu/: .env.example  README.md  pyproject.toml  requirements.txt
nu/browsers/: __init__.py  base_worker.py  freelancer_worker.py  github_worker.py  upwork_worker.py
nu/core/: __init__.py  nuandi.py  planning.py  reasoning.py
nu/scripts/: run_nu.sh  setup_environment.sh
nu/tests/: test_nuandi.py
(+108 files in other folders)
