[tool.poetry]
name = "nu-nuandi"
version = "0.1.0"
description = "Nu - Autonomous Multi-Agent Orchestrator"
authors = ["Holobionte 1rec3"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
browser-use = "^0.1.0"
playwright = "^1.40.0"
aiohttp = "^3.9.0"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
